@@ -50,6 +50,10 @@ Para empezar, instale manualmente el software conector, inicie sesión en la con
 ** https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/concept-overview-cvo.html["Empiece a usar Cloud Volumes ONTAP"^]
 
 
+* El conector ahora le permite agregar y gestionar cubos de Amazon S3 desde BlueXP.
++
+https://docs.netapp.com/us-en/bluexp-s3-storage/task-add-s3-bucket.html["Vea cómo añadir nuevos bloques de Amazon S3 en su cuenta de AWS desde BlueXP"^].
+
 * Esta versión del conector incluye mejoras de Cloud Volumes ONTAP.
 +
 https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/whats-new.html#5-march-2023["Obtenga información acerca de las mejoras de Cloud Volumes ONTAP"^]
